--- a/buildout.cfg
+++ b/buildout.cfg
@@ -10,7 +10,7 @@ find-links = http://op:x9W3jZ@dist.quintagroup.com/op/
 
 [sources]
 openprocurement.api = git https://github.com/openprocurement/openprocurement.api.git
-openprocurement.historical.core = git https://github.com/yshalenyk/openprocurement.historical.core.git branch=test
+openprocurement.historical.core = git https://github.com/yshalenyk/openprocurement.historical.core.git
 
 [test]
 recipe = zc.recipe.egg:scripts
